[package]
name = "mockery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.8"
local-ip-address = "0.4.4"
tide = "0.16.0"
once_cell = "1.10.0"
colored = "2.0.0"
notify = "4.0.17"
mime_guess = "2.0.4"
tide-websockets = "0.4.0"
async-std = { version = "1.10.0", features = ["attributes"] }
uuid = { version = "0.8.2", features = ["v4"] }
