[package]
name = "mockery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.8"
local-ip-address = "0.4.4"
once_cell = "1.10.0"
colored = "2.0.0"
notify = "4.0.17"
mime_guess = "2.0.4"
uuid = { version = "0.8.2", features = ["v4"] }
actix = "0.13.0"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
actix-files = "0.6.0"
tokio = { version = "1.17.0", features = ["full"] }
